[package]
name = "seaslug"
version = "0.0.0"
authors = ["Tyler Neely <t@jujit.su>"]
edition = "2018"
description = "experimental language with a focus on terseness, testability, high quality scheduling and completion-based IO"
license = "GPL-2.0"
homepage = "https://github.com/spacejam/puke"
repository = "https://github.com/spacejam/puke"

[dependencies]
lalrpop-util = "0.19.5"
regex = "1.4.4"
libc = "0.2.88"
num_cpus = "1.13.0"
quiche = "0.7.0"

[build-dependencies]
lalrpop = "0.19.5"
